java/ouhang/dsl/antlr/decisionmodel/DeciLanParser.java
// Generated from DeciLan.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DeciLanParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, Identifier=12, TypeWithParameters=13, TypeParameters=14, 
		StringLiteral=15, CharLiteral=16, BooleanLiteral=17, IntegerLiteral=18, 
		LongLiteral=19, FloatLiteral=20, DoubleLiteral=21, TRUE=22, FALSE=23, 
		NULL=24, NAN=25, VOID=26, GT=27, LT=28, GTE=29, LTE=30, EQ=31, NEQ=32, 
		ADD=33, SUB=34, MUL=35, DIV=36, MOD=37, AND=38, OR=39, NOT=40, COLON=41, 
		ASSIGN=42, ADD_ASSIGN=43, SUB_ASSIGN=44, MUL_ASSIGN=45, DIV_ASSIGN=46, 
		MOD_ASSIGN=47, LPAREN=48, RPAREN=49, LBRACE=50, RBRACE=51, LBRACK=52, 
		RBRACK=53, SEMI=54, COMMA=55, DOT=56, WS=57, COMMENT=58, LINE_COMMENT=59;
	public static final int
		RULE_packageDeclaration = 0, RULE_importDeclaration = 1, RULE_injectDeclaration = 2, 
		RULE_inputDeclaration = 3, RULE_fieldStatement = 4, RULE_functionDeclaration = 5, 
		RULE_modelDeclaration = 6, RULE_parameterList = 7, RULE_parameterDeclaration = 8, 
		RULE_statement = 9, RULE_returnStatement = 10, RULE_localVariableDeclarationStatement = 11, 
		RULE_variableAssignmentStatement = 12, RULE_expr = 13, RULE_exprBooleanOper = 14, 
		RULE_exprAddSub = 15, RULE_exprMulDivMod = 16, RULE_exprNot = 17, RULE_exprAtom = 18, 
		RULE_exprCallMethod = 19, RULE_literal = 20;
	public static final String[] ruleNames = {
		"packageDeclaration", "importDeclaration", "injectDeclaration", "inputDeclaration", 
		"fieldStatement", "functionDeclaration", "modelDeclaration", "parameterList", 
		"parameterDeclaration", "statement", "returnStatement", "localVariableDeclarationStatement", 
		"variableAssignmentStatement", "expr", "exprBooleanOper", "exprAddSub", 
		"exprMulDivMod", "exprNot", "exprAtom", "exprCallMethod", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "'import'", "'.*'", "'inject'", "'input'", "'func'", 
		"'model'", "'if'", "'elif'", "'else'", "'return'", null, null, null, null, 
		null, null, null, null, null, null, "'true'", "'false'", "'null'", "'nan'", 
		"'void'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "':'", "'='", "'+='", "'-='", 
		"'*='", "'/='", "'%='", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
		"','", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"Identifier", "TypeWithParameters", "TypeParameters", "StringLiteral", 
		"CharLiteral", "BooleanLiteral", "IntegerLiteral", "LongLiteral", "FloatLiteral", 
		"DoubleLiteral", "TRUE", "FALSE", "NULL", "NAN", "VOID", "GT", "LT", "GTE", 
		"LTE", "EQ", "NEQ", "ADD", "SUB", "MUL", "DIV", "MOD", "AND", "OR", "NOT", 
		"COLON", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
		"MOD_ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
		"SEMI", "COMMA", "DOT", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DeciLan.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DeciLanParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PackageDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DeciLanParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DeciLanParser.Identifier, i);
		}
		public List<TerminalNode> DOT() { return getTokens(DeciLanParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(DeciLanParser.DOT, i);
		}
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitPackageDeclaration(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_packageDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			match(Identifier);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(44);
				match(DOT);
				setState(45);
				match(Identifier);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DeciLanParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DeciLanParser.Identifier, i);
		}
		public List<TerminalNode> DOT() { return getTokens(DeciLanParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(DeciLanParser.DOT, i);
		}
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitImportDeclaration(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__1);
			setState(54);
			match(Identifier);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(55);
				match(DOT);
				setState(56);
				match(Identifier);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(62);
				match(T__2);
				}
			}

			setState(65);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InjectDeclarationContext extends ParserRuleContext {
		public List<FieldStatementContext> fieldStatement() {
			return getRuleContexts(FieldStatementContext.class);
		}
		public FieldStatementContext fieldStatement(int i) {
			return getRuleContext(FieldStatementContext.class,i);
		}
		public InjectDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_injectDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterInjectDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitInjectDeclaration(this);
		}
	}

	public final InjectDeclarationContext injectDeclaration() throws RecognitionException {
		InjectDeclarationContext _localctx = new InjectDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_injectDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__3);
			setState(68);
			match(LBRACE);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(69);
				fieldStatement();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputDeclarationContext extends ParserRuleContext {
		public List<FieldStatementContext> fieldStatement() {
			return getRuleContexts(FieldStatementContext.class);
		}
		public FieldStatementContext fieldStatement(int i) {
			return getRuleContext(FieldStatementContext.class,i);
		}
		public InputDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterInputDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitInputDeclaration(this);
		}
	}

	public final InputDeclarationContext inputDeclaration() throws RecognitionException {
		InputDeclarationContext _localctx = new InputDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inputDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__4);
			setState(78);
			match(LBRACE);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(79);
				fieldStatement();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldStatementContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DeciLanParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DeciLanParser.Identifier, i);
		}
		public TerminalNode TypeWithParameters() { return getToken(DeciLanParser.TypeWithParameters, 0); }
		public FieldStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterFieldStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitFieldStatement(this);
		}
	}

	public final FieldStatementContext fieldStatement() throws RecognitionException {
		FieldStatementContext _localctx = new FieldStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(Identifier);
			setState(88);
			match(COLON);
			setState(89);
			_la = _input.LA(1);
			if ( !(_la==Identifier || _la==TypeWithParameters) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(90);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DeciLanParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DeciLanParser.Identifier, i);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode TypeWithParameters() { return getToken(DeciLanParser.TypeWithParameters, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__5);
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==Identifier || _la==TypeWithParameters) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(94);
			match(Identifier);
			setState(95);
			parameterList();
			setState(96);
			match(LBRACE);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__10) | (1L << Identifier) | (1L << TypeWithParameters) | (1L << LBRACE))) != 0)) {
				{
				{
				setState(97);
				statement();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DeciLanParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DeciLanParser.Identifier, i);
		}
		public TerminalNode TypeWithParameters() { return getToken(DeciLanParser.TypeWithParameters, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ModelDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterModelDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitModelDeclaration(this);
		}
	}

	public final ModelDeclarationContext modelDeclaration() throws RecognitionException {
		ModelDeclarationContext _localctx = new ModelDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_modelDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__6);
			setState(106);
			_la = _input.LA(1);
			if ( !(_la==Identifier || _la==TypeWithParameters) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(107);
			match(Identifier);
			setState(108);
			match(LBRACE);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__10) | (1L << Identifier) | (1L << TypeWithParameters) | (1L << LBRACE))) != 0)) {
				{
				{
				setState(109);
				statement();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterDeclarationContext> parameterDeclaration() {
			return getRuleContexts(ParameterDeclarationContext.class);
		}
		public ParameterDeclarationContext parameterDeclaration(int i) {
			return getRuleContext(ParameterDeclarationContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitParameterList(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameterList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(LPAREN);
			setState(127);
			_la = _input.LA(1);
			if (_la==Identifier || _la==TypeWithParameters) {
				{
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(118);
						parameterDeclaration();
						setState(119);
						match(COMMA);
						}
						} 
					}
					setState(125);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(126);
				parameterDeclaration();
				}
			}

			setState(129);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DeciLanParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DeciLanParser.Identifier, i);
		}
		public TerminalNode TypeWithParameters() { return getToken(DeciLanParser.TypeWithParameters, 0); }
		public ParameterDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterParameterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitParameterDeclaration(this);
		}
	}

	public final ParameterDeclarationContext parameterDeclaration() throws RecognitionException {
		ParameterDeclarationContext _localctx = new ParameterDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !(_la==Identifier || _la==TypeWithParameters) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(132);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public LocalVariableDeclarationStatementContext localVariableDeclarationStatement() {
			return getRuleContext(LocalVariableDeclarationStatementContext.class,0);
		}
		public VariableAssignmentStatementContext variableAssignmentStatement() {
			return getRuleContext(VariableAssignmentStatementContext.class,0);
		}
		public ExprCallMethodContext exprCallMethod() {
			return getRuleContext(ExprCallMethodContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeciLanListener ) ((DeciLanListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement);
		try {
			setState(161);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				localVariableDeclarationStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				variableAssignmentStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				exprCallMethod();
				setState(137);
				match(SEMI);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				match(LBRACE);
				setState(140);
				statement();
				setState(141);
				match(RBRACE);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(143);
				match(T__7);
				setState(144);
				match(LPAREN);
				setState(145);
				expr();
				setState(146);
				match(RPAREN);
				setState(147);
				statement();
				setState(154);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(148);
					match(T__8);
					setState(149);
					match(LPAREN);
					setState(150);
					expr();
					setState(151);
					match(RPAREN);
					setState(152);
					statement();
					}
					break;
				}
				setState(158);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(156);
					match(T__9);
					setState(157);
					statement();
					}
					break;
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(160);
				returnStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
